registry/3-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
  namespace: registry
spec:
  selector:
    app: registry
  ports:
    - name: http
      port: 80
      targetPort: service
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  labels:
    name: registry-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - registry.axatol.xyz
      secretName: registry-tls
  rules:
    - host: registry.axatol.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: registry-svc
                port:
                  name: http
